# rust_bminor_compiler

./: Cargo.toml  README.md  Requirements.md
backend/: Cargo.toml
backend/src/: asem.asm  lib.rs  output  x86_assembler_generator.rs
bminor_tests/codegen/: good10.bminor  good11.bminor  good12.bminor  good13.bminor  good14.bminor  good15.bminor  good16.bminor  good17.bminor  good2.bminor  good3.bminor  good4.bminor  good5.bminor  good7.bminor  good8.bminor  good9.bminor
frontend/: Cargo.toml  build.rs
frontend/src/: ast.rs  lexer.rs  lib.rs  parser.lalrpop
middle/: Cargo.toml
middle/src/: ir.rs  lib.rs  semantic_analysis.rs  tac_printer.rs
src/: main.rs
test_space/: ex1.b  ex2.b  ex3.b  ex4.b  ex5.b
