[package]
name = "bminor_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
frontend = { path = "./frontend" }
middle = { path = "./middle"}
backend = { path = "./backend"}
regex = "1.10.4"
log = "0.4"
env_logger = "0.11.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
clap = "4.5.9"
structopt = "0.3.26"

